feat: add github workflow for get_channels() test

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -69,3 +69,7 @@ jobs:
         with:
           name: test-report
           path: ${{ steps.test.outputs.report_path }}
+
+      - name: Run test for get_cahnnels
+        run: |
+          python -m unittest test_get_channels.py
