--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ nltk==3.8.1
 pandas==1.5.3
 pick==2.2.0
 seaborn==0.13.0
+pymongo==4.6.1
+psycopg2_binary==2.9.9
+SQLAlchemy==2.023
+streamlit==1.29.0
