--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t msganawberihun10@gmail.com/network_analysis:latest .
+        run: docker build -t misge10/network_analysis:latest .
 
       - name: Push Docker Image
-        run: docker push msganawberihun10@gmail.com/network_analysis:latest .
+        run: docker push misge10/network_analysis:latest 
